@@ -1,6 +1,7 @@
 v2.6.0-dev
 ---------------------
 65905292 - Phone number editing - don't allow duplicate numbers to be entered
+66808486 - Don't show lat long validation error if visiting address
 
 v2.5.0
 ---------------------
